fix: remove unneeded scrollbar from quran reader (#3073)
fix: remove unneded scrollbar from quran reader

--- a/src/components/QuranReader/QuranReader.module.scss
+++ b/src/components/QuranReader/QuranReader.module.scss
@@ -34,7 +34,7 @@ $virtual-scrolling-height-bandage: calc(
 }
 
 .container {
-  overflow-x: hidden;
+  overflow: hidden;
   @include breakpoints.smallerThanTablet {
     padding-block-start: $quran-reader-padding-mobile;
   }
